Minor logo adjustment

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jfaulstick-site-prototype",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jfaulstick.github.io/jfaulstick-site",
+  "homepage": "https://www.joefaulstick.com",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
